--- a/style.css
+++ b/style.css
@@ -1,4 +1,10 @@
-#main
+body
+{
+    /* Kolor całego tła */
+    background: linear-gradient(110deg, #4EFFDF, #48BBDE, #187896);
+}
+
+main
 {
     /* Wymiary */
     width: auto;
@@ -8,11 +14,10 @@
     margin-left: auto;
     margin-right: auto;
     /* Kolory */
-    background-color: red;
     color: white;
 }
 
-#nav
+nav
 {
     /* Wymiary */
     width: auto;
@@ -28,5 +33,4 @@
     width: 100%;
     height: 100%;
     border: 5px solid yellow;
-    
 }
