--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap');
+
+body
+{
+    font-family: "Lato";
+}
+
 #main
 {
     /* Wymiary */
@@ -28,5 +35,19 @@
     width: 100%;
     height: 100%;
     border: 5px solid yellow;
-    
+}
+#nav-table tr, td
+{
+    /* Wymiary */
+    width: 25%;
+    /* Położenie */
+    text-align: center;
+    font-size: xx-large;
+}
+
+#nav-logo, #nav-news, #nav-members, #nav-info
+{
+    /* Wymiary */
+    height: 100%;
+
 }
