--- a/style.css
+++ b/style.css
@@ -39,6 +39,14 @@ nav
     font-size: xx-large;
 }
 
+#nav-table
+{
+    /* Wymiary */
+    width: 100%;
+    height: 100%;
+    border: 5px solid yellow;
+}
+
 #nav-logo, #nav-news, #nav-members, #nav-info
 {
     /* Wymiary */
