--- a/style.css
+++ b/style.css
@@ -1,10 +1,23 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap');
 
+:root
+{
+    --bg-color1: #48BBDE;
+    --bg-color2: #187896;
+    --bg-color3: #4EFFDF;
+    --font-color: #d3d3d3;
+    --color1: #3d3d3d;
+    --color2: #000000;
+}
+
 body
 {
     /* Kolor całego tła */
-    background: linear-gradient(110deg, #4EFFDF, #48BBDE, #187896);
+    background: linear-gradient(110deg, var(--bg-color3), var(--bg-color2), var(--bg-color1));
     font-family: "Lato";
+    color: var(--font-color);
+    /* Wymiary */
+    margin: 0;
 }
 
 main
@@ -13,8 +26,7 @@ main
     width: auto;
     max-width: 1000px;
     min-width: 650px;
-    height: 1000px;
-    border: 5px solid green;
+    border: 1px solid var(--color1);
     /* Położenie */
     margin-left: auto;
     margin-right: auto;
@@ -24,20 +36,26 @@ main
 nav
 {
     /* Wymiary */
-    width: auto;
-    height: 100px;
-    border: 5px solid black;
+    border: 2px solid var(--color2);
+
+    /* Żeby się przyklejała */
+    position: sticky;
+    top: 0;
     /* Kolory */
-    background-color: blue;
-    color: white;
+    background-color: var(--bg-color2);
+    text-shadow: 1px 1px var(--color1);
 }
 
 content
 {
     /* Wymiary */
-    width: auto;
-    height: 100px;
-    background-color: red;
+    display: block;
+    background-color: var(--bg-color1);
+    padding: 30px;
+    /* font */
+    font-size: 30px;
+    color: var(--color1);
+    text-align: center;
 }
 
 #nav-table tr, td
@@ -54,7 +72,6 @@ content
     /* Wymiary */
     width: 100%;
     height: 100%;
-    border: 5px solid yellow;
 }
 
 #nav-logo, #nav-news, #nav-members, #nav-info
