--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ main
 {
     /* Wymiary */
     width: auto;
-    max-width: 1000px;
+    max-width: 1100px;
     min-width: 650px;
     border: 1px solid var(--color1);
     /* Położenie */
@@ -62,6 +62,7 @@ content
 {
     /* Wymiary */
     width: 25%;
+    height: 39px;
     /* Położenie */
     text-align: center;
     font-size: xx-large;
@@ -72,6 +73,7 @@ content
     /* Wymiary */
     width: 100%;
     height: 100%;
+    border-spacing: 6px;
 }
 
 #nav-logo, #nav-news, #nav-members, #nav-info
