--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@
 
 :root
 {
-    --bg-color1: #48BBDE;
-    --bg-color2: #187896;
+    --bg-color1: #ffbc2c;
+    --bg-color2: #d70000;
     --bg-color3: #4EFFDF;
     --font-color: #d3d3d3;
     --color1: #3d3d3d;
@@ -13,6 +13,7 @@
 body
 {
     /* Kolor całego tła */
+
     background: linear-gradient(110deg, var(--bg-color3), var(--bg-color2), var(--bg-color1));
     font-family: "Lato";
     color: var(--font-color);
@@ -46,11 +47,12 @@ nav
     text-shadow: 1px 1px var(--color1);
 }
 
+
 content
 {
     /* Wymiary */
     display: block;
-    background-color: var(--bg-color1);
+    background-color: rgba(255, 253, 253, 0.709);
     padding: 30px;
     /* font */
     font-size: 30px;
