--- a/style.css
+++ b/style.css
@@ -8,8 +8,7 @@
     --font-color: #d3d3d3;
     --color1: #3d3d3d;
     --color2: #000000;
-    /* --color3: #be0101; */
-    --color3: #012dbe;
+    --color3: #be0101;
 }
 
 body
