Dodanie Scrollbara | poprawienie czytelności animation.css

--- a/animation.css
+++ b/animation.css
@@ -1,5 +1,21 @@
 /* ! =-=-=-= ANIMACJE =-=-=-= ! */
 
+/*
+  DO PÓŹNIEJSZEGO USÓNIĘCIA
+
+  ABY DZIAŁAŁ DODATEK:
+  Color Highlight
+
+--bg-color1: #ffbc2c;
+--bg-color2: #d70000;
+--bg-color3: #4ec1ff;
+--font-color: #d3d3d3;
+--font-color2: #f5f5f5;
+--color1: #3d3d3d;
+--color2: #000000;
+--color3: #be0101; 
+*/
+
 /* ! - -   NAV :hover   - - ! */
 
 /* animacja obracania w nav :hover */
