--- a/animation.css
+++ b/animation.css
@@ -1,7 +1,7 @@
 /* ! =-=-=-= ANIMACJE =-=-=-= ! */
 
 /*
-  DO PÓŹNIEJSZEGO USÓNIĘCIA
+  DO PÓŹNIEJSZEGO USUNIĘCIA
 
   ABY DZIAŁAŁ DODATEK:
   Color Highlight
