--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
     --bg-color3: #4ec1ff;
     --font-color: #d3d3d3;
     --font-color2: #f5f5f5;
-    --color1: #3d3d3d;
+    --color1: #2d2d2d;
     --color2: #000000;
     --color3: #be0101;
 }
@@ -19,6 +19,14 @@ body
     color: var(--font-color);
     /* Wymiary */
     margin: 0;
+
+
+    /* background-image: url("img/szkola.jpg"); */
+    background: linear-gradient(rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0.55) ),url(img/szkola.jpg);
+    background-size: cover;
+
+    /* background-color: #000000; */
+    background-attachment: fixed;
 
     /* Aby scrollbar działał */
     overflow: overlay;
@@ -58,7 +66,7 @@ content
 {
     /* Wymiary */
     display: block;
-    background-color: rgba(255, 253, 253, 0.7);
+    background-color: rgba(255, 253, 253, 0.9);
     padding: 30px;
     /* Font */
     font-size: 30px;
@@ -103,13 +111,13 @@ content
 /* Scrollbar */
 html::-webkit-scrollbar
 {
-    width: 2vh;
-    height: 2vh;
+    width: 1vh;
+    height: 1vh;
 }
 html::-webkit-scrollbar-thumb
 {
     background-color: var(--color3);
-    border-radius: 10px;
+    /* border-radius: 10px; */
 }
 html::-webkit-scrollbar-thumb:hover
 {
