--- a/style.css
+++ b/style.css
@@ -104,6 +104,13 @@ content
     height: 100%;
 }
 
+a
+{
+    color: var(--font-color);
+    background-color: transparent;
+    text-decoration: none;
+}
+
 
 
 
