--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     --bg-color1: #ffbc2c;
     --bg-color2: #d70000;
     --bg-color3: #4ec1ff;
-    --font-color: #d3d3d3;
+    --font-color: #858585;
     --font-color2: #f5f5f5;
     --color1: #2d2d2d;
     --color2: #000000;
