--- a/style.css
+++ b/style.css
@@ -89,6 +89,31 @@ content
     text-align: center;
 }
 
+article
+{
+    display: inline;
+    position: relative;
+    text-align: center;
+    color: var(--font-color2);
+    text-shadow: 2px 2px var(--color1);
+    font-size:90%;
+}
+
+article img
+{
+    border-radius: 30px;
+    margin: .5%;
+    width: 45%;
+}
+
+article p
+{
+    display: block;
+    position: absolute;
+    top: -100%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
 
 
 
