--- a/animation.css
+++ b/animation.css
@@ -6,12 +6,34 @@
   ABY DZIAŁAŁ DODATEK:
   Color Highlight
 
---bg-color1: #ffbc2c;
---bg-color2: #d70000;
---bg-color3: #4ec1ff;
---font-color: #d3d3d3;
---font-color2: #f5f5f5;
---color1: #3d3d3d;
---color2: #000000;
---color3: #be0101; 
+    --color1: #2d2d2d;
+    --color2: #000000;
+    --color3: #be0101;
+    --color4: #ffbc2c;
+    --color5: #858585;
+    --color6: #f5f5f5;
+    --color7: #c3c3c3; 
 */
+
+/* ? Article animation */
+/* img */
+article:hover .img-article
+{
+  filter: brightness(40%);
+}
+/* text */
+.text
+{
+  opacity: 0;
+}
+article:hover .text 
+{
+  opacity: 1;
+  transform: translate(-50%, -500%);
+}
+/* title */
+article:hover .title
+{
+  transform: translate(-50%, -900%);
+  color: var(--color4);
+}
