--- a/style.css
+++ b/style.css
@@ -2,26 +2,24 @@
 
 :root
 {
-    --bg-color1: #ffbc2c;
-    --bg-color2: #d70000;
-    --bg-color3: #4ec1ff;
-    --font-color: #858585;
-    --font-color2: #f5f5f5;
-    --font-color3: #c3c3c3;
     --color1: #2d2d2d;
     --color2: #000000;
     --color3: #be0101;
+    --color4: #ffbc2c;
+    --color5: #858585;
+    --color6: #f5f5f5;
+    --color7: #c3c3c3;
 }
 
 body
 {
-    /* Kolor całego tła */
+    /* font */
     font-family: "Lato";
-    color: var(--font-color);
-    /* Wymiary */
+    color: var(--color5);
+    /* wymiary */
     margin: 0;
     /* bg */
-    background: linear-gradient(rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0.55) ),url(img/szkola.jpg);
+    background: linear-gradient(rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0.55) ), url(img/szkola.jpg);
     background-size: cover;
     background-attachment: fixed;
 
@@ -33,7 +31,7 @@ a
 {
     /* font */
     text-decoration: none;
-    color: var(--font-color);
+    color: var(--color5);
 }
 
 main
@@ -41,10 +39,10 @@ main
     /* Wymiary */
     width: auto;
     max-width: 57%;
-    min-width: 850px;
+    min-width: 950px;
     border: 1px solid var(--color1);
-    /* Położenie */
     margin: auto;
+    /* font */
     text-align: center;
 }
 
@@ -55,15 +53,14 @@ nav
     top: 0;
     
     /* bg */
-    background-color: rgba(46, 46, 46, 0.6);
-    text-shadow: 1px 1px var(--color1);
+    background-color: rgba(46, 46, 46, 0.9);
     /* Wymiary */
     padding: 10px;
-    /* Położenie */
+    /* font */
     text-align: center;
-    /* Font */
     font-size: 140%;
     font-weight: bold;
+    text-shadow: 1px 1px var(--color1);
 }
 nav a
 {
@@ -74,11 +71,12 @@ nav a
 nav a:hover
 {
     /* font */
-    color: var(--font-color3);
+    color: var(--color7);
 }
 .nav-selected
 {
-    color: var(--font-color2);
+    /* font */
+    color: var(--color6);
 }
 
 content
@@ -95,30 +93,62 @@ content
 
 article
 {
+    /* wymiary */
     display: inline;
     position: relative;
-    color: var(--font-color2);
+    /* font */
+    color: var(--color6);
     text-shadow: 2px 2px var(--color1);
-    font-size:90%;
+    font-size:110%;
+
+    /* cursor */
+    cursor: pointer;
 }
 
-article img
+.img-article
 {
+    /* wymiary */
     border-radius: 30px;
     margin: .5%;
     width: 45%;
 }
 
-article p
+.text-article
 {
+    /* wymiary */
+    height: 100%;
     display: block;
     position: absolute;
-    top: -100%;
+    top: -300%;
     left: 50%;
     transform: translate(-50%, -50%);
+    transition: all 0.5s;
 }
-
-
+.title
+{
+    /* font */
+    font-size: 2em;
+    font-weight: bold;
+}
+.text
+{
+    /* wymiary */
+    left: 50%;
+}
+.czlonkowie
+{
+    /* font */
+    font-size: 1em;
+    /* wymiary */
+    top: -200%;
+}
+.img-czlonkowie
+{
+    /* wymiary */
+    border-radius: 50%;
+    width: 20%;
+    margin: 20px;
+}
 
 
 /* Scrollbar */
