--- a/style.css
+++ b/style.css
@@ -135,14 +135,14 @@ article
     /* wymiary */
     left: 50%;
 }
-.czlonkowie
+.onas
 {
     /* font */
     font-size: 1em;
     /* wymiary */
     top: -200%;
 }
-.img-czlonkowie
+.img-onas
 {
     /* wymiary */
     border-radius: 50%;
