--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ content
     color: var(--color1);
 }
 
-article
+.article-glowna
 {
     /* wymiary */
     display: inline;
@@ -159,6 +159,20 @@ article
     margin: .5%;
     width: 90%;
     margin-top: 10%;
+}
+
+
+.aktualnosci
+{
+    /* font */
+    color: var(--color1);
+    text-shadow: none;
+    /* border */
+    border: 2px dotted var(--color5);
+    border-radius: 40px;
+    margin-bottom: 20px;
+    padding: 40px;
+    padding-top: 0;
 }
 
 
