--- a/style.css
+++ b/style.css
@@ -183,8 +183,8 @@ content
     border: 2px dotted var(--color5);
     border-radius: 40px;
     margin-bottom: 20px;
-    padding: 40px;
-    padding-top: 0;
+    padding: 60px;
+    padding-top: 20px;
 }
 
 
