--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ main
     /* Wymiary */
     width: auto;
     max-width: 57%;
-    min-width: 950px;
+    /* min-width: 950px; */
     border: 1px solid var(--color1);
     margin: auto;
     /* font */
@@ -112,7 +112,7 @@ content
 {
     /* wymiary */
     border-radius: 30px;
-    /* margin: .5%; */
+    margin: .5%;
     width: 45%;
 }
 
@@ -179,7 +179,7 @@ content
     /* font */
     color: var(--color1);
     text-shadow: none;
-    /* border */
+    /* wymiary */
     border: 2px dotted var(--color5);
     border-radius: 40px;
     margin-bottom: 20px;
